# tcm_cnv

./: .gitignore  py3.11h5togrid-leaves.yml  py3.11h5togrid.yml  pyproject — копия.toml  pyproject-.toml  pyproject.toml  readme.md  tcm_cnv.py
scripts/: 23xx_calibr_incl_hy.py  23xx_clc_hy.py  24xx_calibr_incl_hy.py  24xx_clc_PSD.py  24xx_clc_hy.py  coef_yaml2hdf5.py  fit_P_Tc.ipynb  fit_P_Tc_sklearn-.ipynb  fit_P_Tc_sklearn.ipynb  fit_P_Tc_v2.ipynb  h5_sort.py  h5from_veusz_coef.py  h5zero_calib.py  load_raw_and_plot.ipynb  tcm_cnv_pyinstaller.bat
tcm/: cfg_dataclasses.py  csv_load.py  csv_specific_proc.py  filters.py  filters_scipy.py  graphics.py  h5.py  h5_dask_pandas.py  h5inclinometer_coef.py  h5toh5.py  incl_calibr_hy.py  incl_h5clc_hy.py  incl_h5spectrum.py  tcm_cnv_v0.py  utils2init.py  utils_time.py  utils_time_corr.py  veuszPropagate.py
tcm/calibration/: ellipsoid_fit.py
tcm/cfg/: incl_calibr_hy.yaml  incl_h5clc_hy.yaml  t_chain_PSD.yaml
tcm/cfg/coef/: 190710incl — копия.h5  190710incl.h5  190710incl_no62-67-from tube.h5  descript.ion
tests/: test_filters.py  test_incl_h5clc_hy.py
