[project]
authors = [ {name = "Andrey Korzh", email = "ao.korzh@gmail.com"} ]
description = "Console program to convert raw data files meaured by AB SIO RAS tilt current meters (TCM) to csv and hdf5 data files with physical units optionally with filtering/averaging"
license = "MIT"
name = "absioras-tcm"
version = "0.1.0"
readme = "README.md"

dependencies=[
"wmm2020"
]

[project.optional-dependencies]
test = [ "pytest", "pytest-arraydiff"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tasks]
start = "python tcm/incl_h5clc_hy.py"

[tool.hatch.build.targets.wheel]
packages = ["./tcm"]

[tool.pixi.dependencies]
antlr = "*"
async-timeout = "*"
blosc = "*"
bokeh = "*"
bqplot = "*"
chardet = "*"
dask = "*"
dask-funk = "*"
dtale = "*"
geopandas = "*"
google-api-python-client = "*"
google-auth-oauthlib = "*"
gpxpy = "*"
gsw = "*"
h5py = "*"
hydra-core = "*"
hydra-colorlog = "*"
jupyterlab = "*"
jupyterlab-spellchecker = "*"
lxml = "*"
matplotlib = "*"
mkl = "*"
more-itertools = "*"
nb_conda = "*"
nbconvert = "*"
netcdf4 = "*"
numba = "*"
numcodecs = "*"
numexpr = "*"
openssl = "*"
pandas = "*"
pillow = "*"
pip = "*"
polars = "*"
progressbar2 = "*"
py = "*"
pyinstaller = "*"
pyinstaller-hooks-contrib = "*"
pynmea2 = "*"
pyproj = "*"
pyqt = "*"
pytables = "*"
python = ">=3.11"
pywavelets = "*"
pywin32 = "*"
qt = "*"
qtconsole = "*"
rarfile = "*"
re2 = "*"
requests = "*"
"ruamel.yaml" = "*"
scikit-learn = "*"
scipy = "*"
seaborn = "*"
selenium = "*"
shapely = "*"
snappy = "*"
sqlite = "*"
statsmodels = "*"
sympy = "*"
tabulate = "*"
toolz = "*"
tqdm = "*"
urllib3 = "*"
xarray = "*"
webdriver-manager = "*"
pixi-kernel = "*"
pytest = "*"
pytest-cov = "*"

[tool.pixi.pypi-dependencies]
absioras-tcm = { path = ".", editable = true }

[tool.pixi.workspace]
channels = ["conda-forge", "main"]
platforms = ["win-64"]

[tool.pixi.environments]
test = { features = ["test"], solve-group = "default" }

[tool.ruff]
line-length = 110

